--- a/public/css/productosP.css
+++ b/public/css/productosP.css
@@ -7,8 +7,6 @@
 html, body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
-    display: flex;
-    flex-direction: column;
     min-height: 100vh;
 }
 
@@ -24,13 +22,13 @@ main {
     text-align: center;
 }
 
-h2 {
-    font-size: 2em;
+.title h1 {
+    font-size: 2.5em;
     margin-bottom: 20px;
     color: #333;
 }
 
-#productos-grid {
+.productos-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
@@ -39,7 +37,7 @@ h2 {
     max-width: 1200px;
 }
 
-.producto-item {
+.perfume-item {
     background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -51,11 +49,11 @@ h2 {
     max-width: 280px;
 }
 
-.producto-item:hover {
+.perfume-item:hover {
     transform: scale(1.05);
 }
 
-.producto-item img {
+.perfume-item img {
     width: 100%;
     height: auto;
     margin-bottom: 10px;
@@ -63,7 +61,7 @@ h2 {
     object-fit: cover;
 }
 
-.producto-item h2 {
+.perfume-item h2 {
     font-size: 1em;
     color: #222;
     text-transform: uppercase;
@@ -71,15 +69,21 @@ h2 {
     margin-bottom: 5px;
 }
 
-.producto-item p {
+.perfume-item p {
     font-size: 0.9em;
     color: #666;
     margin-bottom: 5px;
 }
 
-.producto-item p strong {
+.perfume-item p strong {
     font-size: 1em;
     color: #000;
+}
+
+@media (max-width: 1024px) {
+    #productos-grid {
+        grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    }
 }
 
 @media (max-width: 768px) {
