--- a/public/css/productosP.css
+++ b/public/css/productosP.css
@@ -75,6 +75,11 @@ main {
     margin-bottom: 5px;
 }
 
+.productos-grid a {
+    text-decoration: none; 
+    color: inherit; 
+}
+
 .perfume-item p strong {
     font-size: 1em;
     color: #000;
