--- a/public/css/marcas.css
+++ b/public/css/marcas.css
@@ -85,3 +85,34 @@ main {
     width: 30px; 
     height: 30px;
 }
+
+@media (max-width: 768px) {
+    .marca-item {
+        width: 100%;
+        padding: 15px;
+    }
+
+    .marca-item img {
+        width: 170px;
+        height: 180px;
+    }
+
+    .marca-item p {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 480px) {
+    header nav ul {
+        flex-direction: column;
+    }
+
+    .marca-item img {
+        width: 170px;
+        height: 180px;
+    }
+
+    .marca-item p {
+        font-size: 16px;
+    }
+}
