--- a/public/css/producto-detalle.css
+++ b/public/css/producto-detalle.css
@@ -36,7 +36,7 @@ main {
 }
 
 .producto-imagen img {
-    width: 300px;
+    width: 400px;
     height: auto;
     border-radius: 10px;
 }
@@ -75,14 +75,63 @@ main {
     background-color: #d49a9a;
 }
 
-/* Responsivo */
 @media (max-width: 768px) {
     .producto-detalle {
-        flex-direction: column;
+        flex-direction: column; 
         align-items: center;
+        gap: 25px;
+        padding: 25px;
     }
 
     .producto-imagen img {
-        width: 250px;
+        width: 70%; 
+        max-width: 250px;
+    }
+
+    .producto-info {
+        max-width: 90%;
+        text-align: center;
+    }
+
+    .producto-info h1 {
+        font-size: 28px;
+    }
+
+    .producto-info p {
+        font-size: 15px;
+    }
+
+    .btn-agregar {
+        font-size: 14px;
+        padding: 8px;
+    }
+}
+
+@media (max-width: 480px) {
+    main {
+        padding: 10px;
+    }
+
+    .producto-detalle {
+        padding: 15px;
+        gap: 15px;
+    }
+
+    .producto-imagen img {
+        width: 100%;
+        max-width: 250px;
+    }
+
+    .producto-info h1 {
+        font-size: 24px;
+    }
+
+    .producto-info p {
+        font-size: 14px;
+    }
+
+    .btn-agregar {
+        font-size: 12px;
+        padding: 8px;
     }
 }
